[#4]: rename to c*-vault-server to make room for c*-vault-client;
specify container build context to make file work ouf of the box

--- a/code/docker/cc-vault/docker-compose.yml
+++ b/code/docker/cc-vault/docker-compose.yml
@@ -15,10 +15,12 @@ version: "2"
 
 services:
   vault_server:
+    build:
+      context: ../ci-vault-server
     cap_add: [ IPC_LOCK ]
     command: vault server -config /vault/config
-    container_name: ct-vault
-    image: ci-vault
+    container_name: ct-vault-server
+    image: ci-vault-server
     ports:
       - "8200:8200"
     networks:
