--- a/code/docker/cc-vault/docker-compose.yml
+++ b/code/docker/cc-vault/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     # TODO: this must be in sync with loads of settings from other places
     command: /opt/vault/bin/build-vault /opt/vault/conf/vault.ct-vault.DesmoDyne.yaml
     container_name: ct-vault-client
-    image: ci-vault-client
+    image: desmodyne/vault-client
     networks:
       - vault_net
 
@@ -36,7 +36,7 @@ services:
     cap_add: [ IPC_LOCK ]
     command: vault server -config /vault/config
     container_name: ct-vault-server
-    image: ci-vault-server
+    image: desmodyne/vault-server
     ports:
       - "8200:8200"
     networks:
