[#12]: move config files to conf/vault to make room from conf/secrets

--- a/conf/vault/ct-vault.DesmoDyne.yaml
+++ b/conf/vault/ct-vault.DesmoDyne.yaml
@@ -1,5 +1,5 @@
 ---
-# vault.<id>.<organization>.yaml
+# <id>.<organization>.yaml
 #
 # <organization> / <id> YAML configuration file for HashiCorp vault scripts
 #
