[#13]: add more keywords that indicate secrets; add TODO comment

--- a/conf/secrets/local.DesmoDyne.yaml
+++ b/conf/secrets/local.DesmoDyne.yaml
@@ -9,7 +9,7 @@
 
 
 # regex for strings that indicate secrets
-secrets_regex: API_KEY|PASSWORD|USERNAME
+secrets_regex: API_KEY|CLIENT_ID|CLIENT_SECRET|PASSWORD|PROFILE_ID|TRACKING_ID|USERNAME|USER
 
 # regex for a <secret path>:<secret name>=<secret value> line
 line_regex: ([^ ]+):([0-9]+):[ -]*([A-Z_]+)=([^ ]+)$
