[#14]: add first version of script, extracts secrets from target folder

--- a/conf/secrets/local.DesmoDyne.yaml
+++ b/conf/secrets/local.DesmoDyne.yaml
@@ -8,8 +8,20 @@
 # created : 2018-07-07
 
 
+# -----------------------------------------------------------------------------
+# settings for extract-secrets
+
 # regex for strings that indicate secrets
 secrets_regex: API_KEY|CLIENT_ID|CLIENT_SECRET|PASSWORD|PROFILE_ID|TRACKING_ID|USERNAME|USER
 
 # regex for a <secret path>:<secret name>=<secret value> line
-line_regex: ([^ ]+):([0-9]+):[ -]*([A-Z_]+)=([^ ]+)$
+line_regex_ex: ([^ ]+):([0-9]+):[ -]*([A-Z_]+)=([^ ]+)$
+
+# -----------------------------------------------------------------------------
+# settings for upload-secrets
+
+# name suffix for secrets files
+secrets_suffix: .secret
+
+# regex for line in secrets file
+line_regex_up: '.+=.+'
