[#14]: upload secrets to vault; client token still hardcoded

--- a/conf/secrets/localhost.local.DesmoDyne.yaml
+++ b/conf/secrets/localhost.local.DesmoDyne.yaml
@@ -8,6 +8,9 @@
 # created : 2018-07-07
 
 
+# vault server protocol, host and port
+vault_address: http://localhost:8200
+
 # name suffix for secrets files
 secrets_suffix: .secret
 
