--- a/code/docker/cc-vault_local/docker-compose.yml
+++ b/code/docker/cc-vault_local/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     # keep container running to inspect: https://stackoverflow.com/a/42873832
     # command: tail -f /dev/null
     # TODO: this must be in sync with loads of settings from other places
-    command: /opt/vault/bin/build-vault /opt/vault/conf/ct-vault.DesmoDyne.yaml
+    command: /opt/vault/bin/build-vault /opt/vault/conf/local.DesmoDyne.yaml
     container_name: ct-vault-client
     image: ci-vault-client
     networks:
