--- a/code/docker/ci-vault-client/Dockerfile
+++ b/code/docker/ci-vault-client/Dockerfile
@@ -1,20 +1,60 @@
 # Dockerfile
 #
-# container image for HashiCorp Vault client setup
+# container image for HashiCorp Vault setup client
 #
 # author  : stefan schablowski
 # contact : stefan.schablowski@desmodyne.com
 # created : 2018-07-02
 
 
-# NOTE: run this with e.g.
-#   docker run --cap-add IPC_LOCK --name ct-vault -p 8200:8200 ci-vault \
-#     vault server -config /vault/config
+# https://github.com/hashicorp/docker-vault
+# https://hub.docker.com/_/vault/
 
-# TODO: un-expose port 8200 inherited from base container
+
+# NOTE: in order to build this container standalone, provide the context path:
+#   # change to folder underneath project root (indicated by '...')
+#   $ cd .../code/docker/ci-vault-client
+#   $ docker build -f Dockerfile ../../..
+#     ...
+#   $ cd - > /dev/null
+#
+# however, the recommended approach is to use CI/CD build scripts
+# (which builds all artifacts (i.e. containers) in this project
+#  and also takes care of properly tagging the image):
+#   # change to project root (indicated by '...')
+#   $ cd ...
+#   $ ./cicd/bin/build ./cicd/conf/cicd.yaml
+#     ...
+#   $ cd - > /dev/null
+# which is considered the canonical way also followed by any CI tools
+
+# NOTE: once built by CI/CD script, run the container using e.g.
+#   $ docker run --name ct-vault-client desmodyne/ci-vault-client
+#       /opt/vault/bin/build-vault /opt/vault/conf/vault.localhost.yaml
+
+
+# ------------------------------------------------------------------------------
+# NOTE: for multi-stage containers, global settings may (and should as per
+# convention) be the first section in any Dockerfile; single-stage containers
+# must start with a FROM statement; otherwise building fails with
+#   Error response from daemon: No build stage in current context
 
 FROM vault:latest
-MAINTAINER Stefan Schablowski <stefan.schablowski@desmodyne.com>
+
+
+# ------------------------------------------------------------------------------
+# configure global stage / container settings
+
+LABEL maintainer="DesmoDyne Docker Maintainers <docker@desmodyne.com>"
+
+# ARG vs ENV: https://stackoverflow.com/a/41919137
+
+# vault installation directory
+ENV vault_folder=/opt/vault
+
+
+# ------------------------------------------------------------------------------
+# execution stage / container
 
 # install tools required by client scripts
 # https://stackoverflow.com/a/40944512
@@ -25,11 +65,6 @@ RUN apk update && apk add --no-cache bash curl jq python py-pip && \
         https://github.com/mikefarah/yq/releases/download/1.15.0/yq_linux_amd64 && \
     chmod a+x /usr/local/bin/yq && \
     pip install --upgrade pip && pip install j2cli
-
-# ARG vs ENV: https://stackoverflow.com/a/41919137
-
-# vault installation directory
-ENV vault_folder=/opt/vault
 
 RUN mkdir -p "${vault_folder}"
 
